<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/nav_home"-->
<!--            android:icon="@mipmap/ic_launcher"-->
<!--            android:title="@string/home" />-->
<!--        <item-->
<!--            android:id="@+id/nav_profile"-->
<!--            android:icon="@mipmap/ic_launcher"-->
<!--            android:title="@string/profile" />-->
        <item
            android:id="@+id/nav_goal"
            android:title="@string/goal" />
        <item
            android:id="@+id/nav_categories"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_food"
            android:title="@string/food" />
    </group>


</menu>
