<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp">



        <!-- General Table -->
        <TextView
            android:id="@+id/textViewEditGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/general"
            android:textColor="#000000"
            android:textSize="20dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <!-- Headline -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/textViewViewFoodName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="@string/name"
                        android:textColor="#000000"
                        android:textSize="15dp"/>

                    <EditText
                        android:id="@+id/editTextEditFoodName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="12" />
                </TableRow>
            <!-- //Headline -->

            <!-- Manufactor -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textViewViewFoodManufactor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/manufactor"
                    android:textColor="#000000"
                    android:textSize="15dp"/>

                <EditText
                    android:id="@+id/editTextEditFoodManufactor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="12" />
            </TableRow>
            <!-- //Manufactor -->

            <!-- Description -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textViewViewFoodDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/description"
                    android:textColor="#000000"
                    android:textSize="15dp"/>

                <EditText
                    android:id="@+id/editTextEditFoodDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="12" />
            </TableRow>
            <!-- //Description -->

            <!-- Barcode -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textViewEditFoodBarcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/barcode"
                    android:textColor="#000000"
                    android:textSize="15dp"/>

                <EditText
                    android:id="@+id/editTextEditFoodBarcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="12"
                    android:inputType="numberSigned" />
            </TableRow>
            <!-- //Barcode -->

        </TableLayout>
        <!-- //General Table -->


        <!-- Category Table -->
        <TextView
            android:id="@+id/textViewEditCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/category"
            android:textSize="20sp"
            android:textColor="#000000" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Main category -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp">


                <TextView
                    android:id="@+id/textViewEditFoodMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/main"
                    android:textColor="#000000"
                    android:textSize="15dp"/>


                <Spinner
                    android:id="@+id/spinnerEditFoodCategoryMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <!-- //Main Category -->

            <!-- Sub category -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp">


                <TextView
                    android:id="@+id/textViewEditFoodSub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/sub"
                    android:textColor="#000000"
                    android:textSize="15dp"/>


                <Spinner
                    android:id="@+id/spinnerEditFoodCategorySub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <!-- //Sub Category -->

        </TableLayout>
        <!-- //General Table -->


        <!-- Serving Table -->
        <TextView
            android:id="@+id/textViewEditServing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/serving"
            android:textSize="20sp"
            android:textColor="#000000" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Size and Mesurment -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textViewViewFoodMesurment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/mesurment"
                    android:textColor="#000000"
                    android:textSize="15dp"/>

                <EditText
                    android:id="@+id/editTextEditFoodSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="4"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/editTextEditFoodMesurment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6" />
            </TableRow>




            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textViewViewFoodWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/word"
                    android:textColor="#000000"
                    android:textSize="15dp"/>

                <EditText
                    android:id="@+id/editTextEditFoodNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:inputType="numberDecimal" />
                <EditText
                    android:id="@+id/editTextEditFoodWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="4" />
            </TableRow>
            <!-- //Number and Word -->


        </TableLayout>
        <!-- //Serving Table -->



        <!-- Calories table -->
        <TextView
            android:id="@+id/textViewViewFoodCaloriesTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/calories_table"
            android:textSize="20sp"
            android:textColor="#000000" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/textViewViewFoodBlank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/blank"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/textViewViewFoodEnergy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/energy"
                    android:textColor="#000000"
                    android:textSize="15dp"/>
                <TextView
                    android:id="@+id/textViewViewFoodProteins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/proteins"
                    android:textColor="#000000"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/textViewViewFoodCarbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/carbs"
                    android:textColor="#000000"
                    android:textSize="15dp" />
                <TextView
                    android:id="@+id/textViewViewFoodFat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/fat"
                    android:textColor="#000000"
                    android:textSize="15dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textViewViewFoodBlankPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/per_hundred_gran"
                    android:textColor="#000000"
                    android:textSize="15dp"/>

                <EditText
                    android:id="@+id/editTextEditFoodEnergyPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:inputType="numberDecimal"/>
                <EditText
                    android:id="@+id/editTextEditFoodProteinsPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:inputType="numberDecimal" />
                <EditText
                    android:id="@+id/editTextEditFoodCarbsPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:inputType="numberDecimal" />
                <EditText
                    android:id="@+id/editTextEditFoodFatPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:inputType="numberDecimal" />
            </TableRow>

        </TableLayout>
        <!-- //Calories table -->



        <Button
            android:id="@+id/buttonEditFood"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:layout_marginTop="20dp"
            android:background="@drawable/layout_bottom" />


    </LinearLayout>
</ScrollView>