<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <!-- Headline -->
        <TextView
            android:id="@+id/textViewViewFoodName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_marginLeft="7dp"/>

        <TextView
            android:id="@+id/textViewViewFoodManufactorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manufactor"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"/>
        <!-- //Headline -->

        <!-- Edit serving -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">


                <TextView
                    android:id="@+id/textViewPortionSizeA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/portion_size"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:layout_marginLeft="20dp"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="4dp">
                        <EditText
                            android:id="@+id/editTextServingSizePcs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:textColor="@color/black"
                            android:inputType="numberDecimal"
                            android:textSize="18dp"/>

                        <TextView
                            android:id="@+id/textViewServingSizePcsMesurment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/pcs"
                            android:textColor="@color/black"
                            android:textSize="18dp"/>
                    </TableRow>
                </TableLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/textViewPortionSizeB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/portion_size"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:layout_marginLeft="20dp"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="4dp">
                        <EditText
                            android:id="@+id/editTextServingSizeGram"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:textColor="@color/black"
                            android:inputType="numberDecimal"
                            android:textSize="18dp"/>

                        <TextView
                            android:id="@+id/textViewServingSizeGramMesurment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/gram"
                            android:textColor="@color/black"
                            android:textSize="18dp"/>
                    </TableRow>
                </TableLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <TextView
                    android:id="@+id/textViewBlank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank" />

                <Button
                    android:id="@+id/buttonSubmitEdit"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/edit"
                    android:background="@drawable/layout_bottom"/>

                <Button
                    android:id="@+id/buttonSubmitDelete"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="12dp"
                    android:text="@string/unlink"
                    android:background="@drawable/layout_bottom"/>

            </TableRow>
        </TableLayout>
        <!-- //Edit serving -->

    </LinearLayout>
</ScrollView>